--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+*, *::after, *::before {
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
